Переделываю вёрстку с нуля Сделал хэдер Начал линки Всеми силами избегаю дивы, вроде даже выходит (На самом деле это 2-я версия переделки)

--- a/index.html
+++ b/index.html
@@ -7,59 +7,33 @@
     <script src="./js/index.js" defer></script>
 </head>
 <body>
-    <div id="allhead">
-        <div id="lefthead">
-            <div class="logo">
-                <img src="img/egle-logo.png" height="29" width="43" alt="Oh sheet, i'm sorry"/>
-                <p>Gachimuchi</p>
+    <main>
+        <header class="header">
+            <div class="header__left">
+                <ul>
+                    <li class="header__left-spine"> probo eloquentiam---------- </li>
+                    <li class="header__left-spine"> salutandi/2024. </li>
+                </ul>
+                <div class="header__left-text">
+                    <img src="img/logo.png" width="159" height="29" alt="Influexa">
+                    <h1>We Bring <br> <span> Customers </span> </h1>
+                    <p>Et ullum iisque conclusionemque eam, mel ad erat cum
+                        accumsan noluisse, nostrum accumsan movet salutandi.
+                        Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
+                    <h2> <a href="#Find"> Find Our more </a> </h2>
+                </div>
             </div>
-            <div class="vert_p"> <i> probo eloquentiam </i> </div>
-            <div class="vert_s"> <i>salutandi/2024. </i> </div>
-            <div class="find"> Find Our more </div>
-            <div class="we_bring">
-                <h1>We Fisting</h1>
-                <h2>& Cumming</h2>
-                <p> <i> Et ullum iisque conclusionemque eam, mel ad erat cum <br>
-                        accumsan noluisse, nostrum accumsan movet salutandi. Fugit <br>
-                        expetenda interesset no, probo eloquentiam mei eu. </i> </p>
-            </div>
-        </div>
-            <div id="righthead">
-            <img src="img/Billy.png" height="706" width="720" alt="We are sorry, fuck you.."/>
-            <img src="img/Vector_button1.png" height="20" width="30" alt="123"/>
-            <img src="img/Vector_button1_background.png" height="110" width="130" alt="123"/>
-            </div>
-    </div>
-    <div id="beige_stripe">
-        <div class="links">
-            <div class="links_pic">
-            <img src="img/stripe.png" height="45" width="185" alt="Stripe"/>
-            <img src="img/Spotify.png" height="45" width="185" alt="Spotify"/>
-            <img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/>
-            <img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/>
-            <img src="img/Behance.png" height="45" width="185" alt="Behance"/>
-            </div>
-        </div>
-    </div>
-    <div id="build_social">
-        <div class="bild_img">
-            <div class="img_pos"><img src="img/pazzle_duet.png" height="503" width="573" alt="123123123"/>
-            </div>
-        </div>
-        <div class="bild_text">
-            <h1>Build Your Social <br> Marketing With Us </h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but <br>
-                the majority have suffered alteration in some form, by injected humour, <br>
-                or randomised words which don't look even slightly believable. If you <br>
-                are going to use a passage of Lorem Ipsum, you need to be sure there <br>
-                isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum <br>
-                generators on the Internet tend to repeat</p>
-        </div>
-    </div>
-    <div id="gray_stripe">
-        <div class="gray_col1"></div>
-        <div class="gray_col2"></div>
-        <div class="gray_col3"></div>
-    </div>
+        </header>
+        <section class="stripe">
+            <ul>
+                <li class="stripe__link"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></li>
+                <li class="stripe__link"><img src="img/Spotify.png" height="45" width="185" alt="Spotify"/></li>
+                <li class="stripe__link"><img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/></li>
+                <li class="stripe__link"><img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/></li>
+                <li class="stripe__link"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></li>
+            </ul>
+        </section>
+        <a name="Find"></a>
+    </main>
 </body>
 </html>
