Переделываю вёрстку с нуля Сделал хэдер Начал линки Всеми силами избегаю дивы, вроде даже выходит (На самом деле это 2-я версия переделки)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li class="stripe__link"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></li>
             </ul>
         </section>
-        <a name="Find"></a>
+        <!--<a name="Find"></a>-->
     </main>
 </body>
 </html>
