Разместил страницу по центру экрана Переделал косяки с {margin: -x} и другие Сделеал более логичные классы и, следовательно, больше не больше не ссылаюсь по типу [.класс селектор] Допёр что выделение слов красным можно сделать классом для спана и не засорять css Есть проблема с отступом, который не убрать если не прописать команду *{margin: 0; padding: 0;}. Оно написано в body, но не работает.

--- a/index.html
+++ b/index.html
@@ -7,33 +7,31 @@
     <script src="./js/index.js" defer></script>
 </head>
 <body>
-    <main>
+    <div class="white-page">
         <header class="header">
-            <div class="header__left">
-                <ul>
-                    <li class="header__left-spine"> probo eloquentiam---------- </li>
-                    <li class="header__left-spine"> salutandi/2024. </li>
-                </ul>
-                <div class="header__left-text">
-                    <img src="img/logo.png" width="159" height="29" alt="Influexa">
-                    <h1>We Bring <br> <span> Customers </span> </h1>
-                    <p>Et ullum iisque conclusionemque eam, mel ad erat cum
-                        accumsan noluisse, nostrum accumsan movet salutandi.
-                        Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
-                    <h2> <a href="#Find"> Find Our more </a> </h2>
-                </div>
+            <div>
+                <span class="header__spine"> probo eloquentiam </span>
+                <span class="header__spine"> salutandi/2024. </span>
+            </div>
+            <div class="header__text-block">
+                <img src="img/logo.png" width="159" height="29" alt="Influexa">
+                <h1 class="header__title">We Bring <br> <span class="red-marked"> Customers </span></h1>
+                <p class="header__paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
+                    accumsan noluisse, nostrum accumsan movet salutandi.
+                    Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
+                <h2 class="header__button"><a href="#Find"> Find Our more </a></h2>
             </div>
         </header>
-        <section class="stripe">
+        <section class="beige-stripe">
             <ul>
-                <li class="stripe__link"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></li>
-                <li class="stripe__link"><img src="img/Spotify.png" height="45" width="185" alt="Spotify"/></li>
-                <li class="stripe__link"><img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/></li>
-                <li class="stripe__link"><img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/></li>
-                <li class="stripe__link"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></li>
+                <li class="beige-stripe__link"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></li>
+                <li class="beige-stripe__link"><img src="img/Spotify.png" height="45" width="185" alt="Spotify"/></li>
+                <li class="beige-stripe__link"><img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/></li>
+                <li class="beige-stripe__link"><img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/></li>
+                <li class="beige-stripe__link"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></li>
             </ul>
         </section>
         <!--<a name="Find"></a>-->
-    </main>
+    </div>
 </body>
 </html>
