Подредактировал то что было, заменил таблицу на спаны - неубирающийся отступ отступил, надо разобраться как работают списки Набросал следущие пару секций в html

--- a/index.html
+++ b/index.html
@@ -7,31 +7,66 @@
     <script src="./js/index.js" defer></script>
 </head>
 <body>
-    <div class="white-page">
-        <header class="header">
-            <div>
-                <span class="header__spine"> probo eloquentiam </span>
-                <span class="header__spine"> salutandi/2024. </span>
-            </div>
-            <div class="header__text-block">
-                <img src="img/logo.png" width="159" height="29" alt="Influexa">
-                <h1 class="header__title">We Bring <br> <span class="red-marked"> Customers </span></h1>
-                <p class="header__paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
-                    accumsan noluisse, nostrum accumsan movet salutandi.
-                    Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
-                <h2 class="header__button"><a href="#Find"> Find Our more </a></h2>
-            </div>
-        </header>
-        <section class="beige-stripe">
-            <ul>
-                <li class="beige-stripe__link"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></li>
-                <li class="beige-stripe__link"><img src="img/Spotify.png" height="45" width="185" alt="Spotify"/></li>
-                <li class="beige-stripe__link"><img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/></li>
-                <li class="beige-stripe__link"><img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/></li>
-                <li class="beige-stripe__link"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></li>
-            </ul>
-        </section>
+<div class="white-page">
+    <header class="header">
+        <div>
+            <span class="header__spine"> probo eloquentiam </span>
+            <span class="header__spine"> salutandi/2024. </span>
+        </div>
+        <div class="header__text-block">
+            <img src="img/logo.png" width="159" height="29" alt="Influexa">
+            <h1 class="header__title">We Bring <br> <span class="red-marked"> Customers </span></h1>
+            <p class="header__paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
+                accumsan noluisse, nostrum accumsan movet salutandi.
+                Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
+            <h2 class="header__button"><a href="#Find"> Find Our more </a></h2>
+        </div>
+        <a class="menu-button" href="http://123.cum"> CUM </a>
+    </header>
+    <section class="beige-stripe">
+        <a class="beige-stripe__link" href="http://123.cum"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></a>
+        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Spotify.png" height="45" width="185"
+                                                             alt="Spotify"/></a>
+        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Microsoft.png" height="45" width="185"
+                                                             alt="Microsoft"/></a>
+        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Dropbox.png" height="45" width="185"
+                                                             alt="Dropbox"/></a>
+        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Behance.png" height="45" width="185"
+                                                             alt="Behance"/></a>
+    </section>
+    <section class="block-1">
+        <h2 class="box-title">Build Your Social <span class="red-marked"> Marketing </span> With Us</h2>
+        <p class="box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
+            believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+            embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat</p>
+        <ul class="block-1__list">
+            <li>Social Media Marketing</li>
+            <li>Growth Business Development</li>
+            <li>Market Research & Content Marketing</li>
+        </ul>
+    </section>
+    <section class="gray-stripe">
+        <div class="gray-stripe__column-1">
+            <h5 class="column-name"></h5>
+            <h2 class="column-title"></h2>
+            <p class="column-paragraph"></p>
+            <a href="http://123.cum" class="column-button"></a>
+        </div>
+        <div class="gray-stripe__column-2">
+            <h5 class="column-name"></h5>
+            <h2 class="column-title"></h2>
+            <p class="column-paragraph"></p>
+            <a href="http://123.cum" class="column-button"></a>
+        </div>
+        <div class="gray-stripe__column-2">
+            <h5 class="column-name"></h5>
+            <h2 class="column-title"></h2>
+            <p class="column-paragraph"></p>
+            <a href="http://123.cum" class="column-button"></a>
+        </div>
+    </section>
         <!--<a name="Find"></a>-->
-    </div>
+</div>
 </body>
 </html>
