Отредактировл beige-stripe - смотриться лучше и сделанно проще Сверстал секцию block-1

--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
         <a class="menu-button" href="http://123.cum"> CUM </a>
     </header>
     <section class="beige-stripe">
-        <a class="beige-stripe__link" href="http://123.cum"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></a>
-        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Spotify.png" height="45" width="185"
-                                                             alt="Spotify"/></a>
-        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Microsoft.png" height="45" width="185"
-                                                             alt="Microsoft"/></a>
-        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Dropbox.png" height="45" width="185"
-                                                             alt="Dropbox"/></a>
-        <a class="beige-stripe__link" href="http://123.cum"><img src="img/Behance.png" height="45" width="185"
-                                                             alt="Behance"/></a>
+        <div class="beige-stripe__links">
+            <a href="http://123.cum"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></a>
+            <a href="http://123.cum"><img src="img/Spotify.png" height="45" width="185" alt="Spotify"/></a>
+            <a href="http://123.cum"><img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/></a>
+            <a href="http://123.cum"><img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/></a>
+            <a href="http://123.cum"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></a>
+        </div>
     </section>
     <section class="block-1">
-        <h2 class="box-title">Build Your Social <span class="red-marked"> Marketing </span> With Us</h2>
-        <p class="box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have
-            suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
-            believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-            embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat</p>
-        <ul class="block-1__list">
-            <li>Social Media Marketing</li>
-            <li>Growth Business Development</li>
-            <li>Market Research & Content Marketing</li>
-        </ul>
+        <div class="block-1__text">
+            <h2 class="box-title">Build Your Social <span class="red-marked"> Marketing </span> With Ass</h2>
+            <p class="box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
+                embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat</p>
+            <ul class="block-1__list">
+                <li>Social Media Marketing</li>
+                <li>Growth Business Development</li>
+                <li>Market Research & Content Marketing</li>
+            </ul>
+        </div>
     </section>
     <section class="gray-stripe">
         <div class="gray-stripe__column-1">
@@ -66,7 +66,7 @@
             <a href="http://123.cum" class="column-button"></a>
         </div>
     </section>
-        <!--<a name="Find"></a>-->
+    <!--<a name="Find"></a>-->
 </div>
 </body>
 </html>
