Сверстал секцию block-1 Заметил что экран не скролится, тк изначально спозиционировал страницу через fixed, пока поменял на absolut. Надо посмотреть что с этим можно сделать.. или ничего не делать. Хз.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     <section class="block-1">
         <div class="block-1__text">
             <h2 class="box-title">Build Your Social <span class="red-marked"> Marketing </span> With Ass</h2>
-            <p class="box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority have
+            <p class="box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority
+                have
                 suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
                 believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat</p>
+                embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to
+                repeat</p>
             <ul class="block-1__list">
                 <li>Social Media Marketing</li>
                 <li>Growth Business Development</li>
@@ -47,23 +49,26 @@
         </div>
     </section>
     <section class="gray-stripe">
-        <div class="gray-stripe__column-1">
-            <h5 class="column-name"></h5>
-            <h2 class="column-title"></h2>
-            <p class="column-paragraph"></p>
-            <a href="http://123.cum" class="column-button"></a>
+        <div class="gray-stripe__column">
+            <h5 class="column-name">SEO Analysis</h5>
+            <h2 class="column-title">Developing Business Managment Skills</h2>
+            <p class="column-paragraph">Alia mucius ex nam, ea facer liber usu, e aliquam platontem est. Ut melo cum
+                comune similique in.</p>
+            <a href="http://123.cum" class="column-button">Find Out More</a>
         </div>
-        <div class="gray-stripe__column-2">
-            <h5 class="column-name"></h5>
-            <h2 class="column-title"></h2>
-            <p class="column-paragraph"></p>
-            <a href="http://123.cum" class="column-button"></a>
+        <div class="gray-stripe__column">
+            <h5 class="column-name">Content Writing</h5>
+            <h2 class="column-title">Developing Business Managment Skills</h2>
+            <p class="column-paragraph">Alia mucius ex nam, ea facer liber usu, e aliquam platontem est. Ut melo cum
+                comune similique in.</p>
+            <a href="http://123.cum" class="column-button">Find Out More</a>
         </div>
-        <div class="gray-stripe__column-2">
-            <h5 class="column-name"></h5>
-            <h2 class="column-title"></h2>
-            <p class="column-paragraph"></p>
-            <a href="http://123.cum" class="column-button"></a>
+        <div class="gray-stripe__column">
+            <h5 class="column-name">MUSIC, VIDEOS</h5>
+            <h2 class="column-title">Developing Business Managment Skills</h2>
+            <p class="column-paragraph">Alia mucius ex nam, ea facer liber usu, e aliquam platontem est. Ut melo cum
+                comune similique in.</p>
+            <a href="http://123.cum" class="column-button">Find Out More</a>
         </div>
     </section>
     <!--<a name="Find"></a>-->
