--- a/index.html
+++ b/index.html
@@ -14,24 +14,23 @@
             <span class="header__spine"> salutandi/2024. </span>
         </div>
         <div class="header__text-block">
-            <img src="img/logo.png" width="159" height="29" alt="Influexa">
             <h1 class="header__title">We Bring <br> <span class="red-marked"> Customers </span></h1>
             <p class="header__paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
                 accumsan noluisse, nostrum accumsan movet salutandi.
                 Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
-            <h2 class="header__button"><a href="#Find"> Find Our more </a></h2>
+            <h2 class="header__find-button"><a href="http://123.cum"> Find Our more </a></h2>
         </div>
         <a class="menu-button" href="http://123.cum"> CUM </a>
     </header>
-    <section class="beige-stripe">
+    <div class="header__stripe beige-background">
         <div class="beige-stripe__links">
-            <a href="http://123.cum"><img src="img/stripe.png" height="45" width="185" alt="stripe"/></a>
-            <a href="http://123.cum"><img src="img/Spotify.png" height="45" width="185" alt="Spotify"/></a>
-            <a href="http://123.cum"><img src="img/Microsoft.png" height="45" width="185" alt="Microsoft"/></a>
-            <a href="http://123.cum"><img src="img/Dropbox.png" height="45" width="185" alt="Dropbox"/></a>
-            <a href="http://123.cum"><img src="img/Behance.png" height="45" width="185" alt="Behance"/></a>
+            <a class="beige-stripe__links-1" href="http://123.cum"></a>
+            <a class="beige-stripe__links-2" href="http://123.cum"></a>
+            <a class="beige-stripe__links-3" href="http://123.cum"></a>
+            <a class="beige-stripe__links-4" href="http://123.cum"></a>
+            <a class="beige-stripe__links-5" href="http://123.cum"></a>
         </div>
-    </section>
+    </div>
     <section class="block-1">
         <div class="block-1__text">
             <h2 class="box-title">Build Your Social <span class="red-marked"> Marketing </span> With Ass</h2>
@@ -46,6 +45,7 @@
                 <li>Growth Business Development</li>
                 <li>Market Research & Content Marketing</li>
             </ul>
+            <a class="box-link" href="http://123.cum">Learn More</a>
         </div>
     </section>
     <section class="gray-stripe">
@@ -70,6 +70,27 @@
                 comune similique in.</p>
             <a href="http://123.cum" class="column-button">Find Out More</a>
         </div>
+    </section>
+    <section class="block-2">
+        <div class="block-2__text">
+            <h2 class="box-title">What we can do for your <span class="red-marked"> business </span></h2>
+            <p class="box-paragraph">Learn more about the range of our services.
+                Et ullum iisque conclusionemque eam, mel ad erat cum accumsan noluisse, nostrum accumsan movet
+                salutandi. Fugit expetenda interesset no, probo eloquentiam mei eu. Sea id malorum dolor.</p>
+            <a class="block-2__text-link box-link" href="http://123.cum">Contact Us</a>
+        </div>
+        <div class="block-2__images">
+            <div class="block-2_image-1"></div>
+            <div class="block-2_image-2"></div>
+        </div>
+    </section>
+    <section class="block-2__stripe beige-background">
+        <div class="beige-stripe__text">
+            <h2 class="beige-stripe__title">Talk to our Team.</h2>
+            <p class="beige-stripe__paragraph">Learn more about the range of our services. Et ullum iisque
+                conclusionemque eam, mel ad erat </p>
+        </div>
+        <a class="block-2__stripe-link box-link" href="http://123.cum">Contact Us</a>
     </section>
     <!--<a name="Find"></a>-->
 </div>
