--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     </section>
     <section class="block-2">
         <div class="block-2__text">
-            <h2 class="box-title">What we can do for your <span class="red-marked"> business </span></h2>
-            <p class="box-paragraph">Learn more about the range of our services.
+            <h2 class="block-2__text-title box-title">What we can do for your <span class="red-marked"> business </span>
+            </h2>
+            <p class="block-2__text-paragraph box-paragraph">Learn more about the range of our services.
                 Et ullum iisque conclusionemque eam, mel ad erat cum accumsan noluisse, nostrum accumsan movet
                 salutandi. Fugit expetenda interesset no, probo eloquentiam mei eu. Sea id malorum dolor.</p>
             <a class="block-2__text-link box-link" href="http://123.cum">Contact Us</a>
@@ -92,6 +93,156 @@
         </div>
         <a class="block-2__stripe-link box-link" href="http://123.cum">Contact Us</a>
     </section>
+    <section class="video">
+        <video class="video__content" controls>
+            <source src="https://123.cum" type="video/mp4"/>
+        </video>
+        <div class="video__description">
+            <div class="video__description-text">
+                <h2 class="box-title">The heart of our human centered <span class="red-marked">design skills</span></h2>
+                <p class="box-paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum accumsan ei noluisse,
+                    nostrum
+                    accumsan salutandi eam cu. Fugit expetenda ei prim interesset no his, probo mei eu eloquentiam. Sea
+                    id
+                    saepe dolores sed malorum sapientem, copiosae et melnusquam nam an abhorreant.</p>
+            </div>
+            <ul class="video__list">
+                <li class="video__list-point">– Project strategy</li>
+                <li class="video__list-point">– UX research and conceptualization</li>
+                <li class="video__list-point">– Information architecture (IA)</li>
+                <li class="video__list-point">– User interface design (UI)</li>
+                <li class="video__list-point">– Interaction design (IxD)</li>
+            </ul>
+        </div>
+    </section>
+    <section class="articles">
+        <div class="article-1">
+            <a href="http://123.cum" class="article-1__link"></a>
+            <h4 class="article-category">Business</h4>
+            <h3 class="article-title">Work rules</h3>
+        </div>
+        <div class="article-2">
+            <a href="http://123.cum" class="article-2__link"></a>
+            <h4 class="article-category">Business</h4>
+            <h3 class="article-title">Work rules</h3>
+        </div>
+        <div class="article-3">
+            <a href="http://123.cum" class="article-3__link"></a>
+            <h4 class="article-category">Business</h4>
+            <h3 class="article-title">Work rules</h3>
+        </div>
+        <div class="article-4">
+            <a href="http://123.cum" class="article-4__link"></a>
+            <h4 class="article-category">Business</h4>
+            <h3 class="article-title">Work rules</h3>
+        </div>
+    </section>
+    <section class="community">
+        <div class="community__team">
+            <div class="community__team-text">
+                <h1 class="team-text-title">Meet our team of <span class="red-marked">Creatives</span></h1>
+                <p class="team-text-paragraph box-paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
+                    accumsan ei
+                    noluisse, nostrum accumsan salutandi eam cu.</p>
+            </div>
+            <div class="community__team-photos">
+                <div class="team-photos-man"></div>
+                <div class="team-photos-nigga"></div>
+                <div class="team-photos-woman"></div>
+            </div>
+            <div class="community__team-info">
+                <div class="community__team-info__person">
+                    <div class="community__team-info__text">
+                        <h3 class="team-info__text-name">Martin Guptill</h3>
+                        <p class="team-info__text-job">Master at Dungeon</p>
+                    </div>
+                    <div class="community__team-info__link">
+                        <a href="http://123.cum" class="team-info__link-1"></a>
+                        <a href="http://123.cum" class="team-info__link-2"></a>
+                        <a href="http://123.cum" class="team-info__link-3"></a>
+                    </div>
+                </div>
+                <div class="community__team-info__person">
+                    <div class="community__team-info-text">
+                        <h3 class="team-info__text-name">Tomas Brown</h3>
+                        <p class="team-info__text-job">Slave at Dungeon</p>
+                    </div>
+                    <div class="community__team-info__link">
+                        <a href="http://123.cum" class="team-info__link-1"></a>
+                        <a href="http://123.cum" class="team-info__link-2"></a>
+                        <a href="http://123.cum" class="team-info__link-3"></a>
+                    </div>
+                </div>
+                <div class="community__team-info__person">
+                    <div class="community__team-info-text">
+                        <h3 class="team-info__text-name">Marta Guptill</h3>
+                        <p class="team-info__text-job">What a Dungeon?</p>
+                    </div>
+                    <div class="community__team-info__link">
+                        <a href="http://123.cum" class="team-info__link-1"></a>
+                        <a href="http://123.cum" class="team-info__link-2"></a>
+                        <a href="http://123.cum" class="team-info__link-3"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="community__patients">
+            <p class="patients-subtitle">Testimonial</p>
+            <h1 class="patients-title">Our <span class="red-marked">Patients</span></h1>
+            <div class="patients__block">
+                <p class="patients__block-text"></p>
+                <h3 class="patients__block-name"></h3>
+                <h4 class="patients__block-status"></h4>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__column">
+            <div class="footer__column-1">
+                <h3 class="footer__title">Company</h3>
+                <ul class="footer__links">
+                    <li><a class="footer__link" href="http://123.cum">About</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Features</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Works</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Career</a></li>
+                </ul>
+            </div>
+            <div class="footer__column-2">
+                <h3 class="footer__title">Help</h3>
+                <ul class="footer__links">
+                    <li><a class="footer__link" href="http://123.cum">Customer Support</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Delivery Details</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Terms & Conditions</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="footer__column-3">
+                <h3 class="footer__title">Resources</h3>
+                <ul class="footer__links">
+                    <li><a class="footer__link" href="http://123.cum">Free eBooks</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Development Tutorial</a></li>
+                    <li><a class="footer__link" href="http://123.cum">How to - Blog</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Youtube Playlist</a></li>
+                </ul>
+            </div>
+            <div class="footer__column-4">
+                <h3 class="footer__title">Links</h3>
+                <ul class="footer__links">
+                    <li><a class="footer__link" href="http://123.cum">Free eBooks</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Development Tutorial</a></li>
+                    <li><a class="footer__link" href="http://123.cum">How to - Blog</a></li>
+                    <li><a class="footer__link" href="http://123.cum">Youtube Playlist</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__spine">
+            <p class="footer__spine-copyright footer__link">© Copyright 2022, All Rights Reserved</p>
+            <div class="privacy-terms ">
+                <a href="http://123.cum" class="footer__spine-privacy footer__link">Privacy Policy</a>
+                <a href="http://123.cum" class="footer__spine-terms footer__link">Terms & Conditions</a>
+            </div>
+        </div>
+    </footer>
     <!--<a name="Find"></a>-->
 </div>
 </body>
