--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <section class="block-1">
         <div class="block-1__text">
-            <h2 class="box-title">Build Your Social <span class="red-marked"> Marketing </span> With Ass</h2>
-            <p class="box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority
+            <h2 class="block-1__text-title box-title">Build Your Social <span class="red-marked"> Marketing </span> With Ass</h2>
+            <p class="block-1__text-paragraph box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority
                 have
                 suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
                 believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
@@ -140,7 +140,7 @@
     <section class="community">
         <div class="community__team">
             <div class="community__team-text">
-                <h1 class="team-text-title">Meet our team of <span class="red-marked">Creatives</span></h1>
+                <h1 class="community-title">Meet our team of <span class="red-marked">Creatives</span></h1>
                 <p class="team-text-paragraph box-paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
                     accumsan ei
                     noluisse, nostrum accumsan salutandi eam cu.</p>
@@ -187,12 +187,43 @@
             </div>
         </div>
         <div class="community__patients">
-            <p class="patients-subtitle">Testimonial</p>
-            <h1 class="patients-title">Our <span class="red-marked">Patients</span></h1>
+            <p class="community-subtitle">---Testimonial</p>
+            <h1 class="community-title">Our <span class="red-marked">Patients</span></h1>
             <div class="patients__block">
-                <p class="patients__block-text"></p>
-                <h3 class="patients__block-name"></h3>
-                <h4 class="patients__block-status"></h4>
+                <p class="patients__block-text">Labores placerat salutandi nam ea, id qui eligendi ex adipiscing sei
+                    disputationi. Iuvaret constituam id his, epicuri evertitur quo in, sint </p>
+                <h3 class="patients__block-name">Joe Root</h3>
+                <h4 class="patients__block-status">Happy Patient</h4>
+                <div class="patients__block-photo">
+                    <div class="patients__block-photo-1"></div>
+                    <div class="patients__block-photo-2"></div>
+                    <div class="patients__block-photo-3"></div>
+                </div>
+            </div>
+        </div>
+        <div class="community__news">
+            <p class="community-subtitle _news-title-width"> ---Our Blog</p>
+            <h1 class="community-title _news-title-width">Check <span class="red-marked">the News</span></h1>
+            <div class="news__column">
+                <div class="news__column-1">
+                    <h3 class="news__column-title _news-width">The Best Fonts for Modern Design</h3>
+                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January 25, 2021</p>
+                    <p class="news__column-preview _news-width">A leisurely start as not expected at our next
+                        campsite....</p>
+                </div>
+                <div class="news__column-2">
+                    <h3 class="news__column-title _news-width">Identity Design for a New Crusader</h3>
+                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January 25, 2021</p>
+                    <p class="news__column-preview _news-width">There is always one constant about international
+                        travel...</p>
+                </div>
+                <div class="news__column-3">
+                    <h3 class="news__column-title _news-width">The Best Fonts for Modern Design</h3>
+                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January 25, 2021</p>
+                    <p class="news__column-preview _news-width">Just for once we were trying to forget Covid . We were
+                        out for the
+                        morning...</p>
+                </div>
             </div>
         </div>
     </section>
@@ -243,7 +274,6 @@
             </div>
         </div>
     </footer>
-    <!--<a name="Find"></a>-->
 </div>
 </body>
 </html>
