font-size to px pic to directory The button at the top right has been converted into a header Less hardcode Made a hover for links in the footer

--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
     <script src="./js/index.js" defer></script>
 </head>
 <body>
-<div class="white-page">
+<main class="white-page">
     <header class="header">
-        <div>
-            <span class="header__spine"> probo eloquentiam </span>
-            <span class="header__spine"> salutandi/2024. </span>
+        <div class="menu-button_right">
+            <div class="menu-button"></div>
         </div>
-        <div class="header__text-block">
-            <h1 class="header__title">We Bring <br> <span class="red-marked"> Customers </span></h1>
-            <p class="header__paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
-                accumsan noluisse, nostrum accumsan movet salutandi.
-                Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
-            <h2 class="header__find-button"><a href="http://123.cum"> Find Our more </a></h2>
-        </div>
-        <a class="menu-button" href="http://123.cum"> CUM </a>
     </header>
+    <section class="block-0">
+        <div class="block-0__logo"></div>
+        <div class="block-0__info">
+            <div class="block-0__spine">
+                <span> probo eloquentiam </span>
+                <span> salutandi/2024. </span>
+            </div>
+            <div class="block-0__text-block">
+                <h1 class="block-0__title">We Bring <span class="red-marked"> Customers </span></h1>
+                <p class="block-0__paragraph">Et ullum iisque conclusionemque eam, mel ad erat cum
+                    accumsan noluisse, nostrum accumsan movet salutandi.
+                    Fugit expetenda interesset no, probo eloquentiam mei eu. </p>
+                <input type="button" value="Find Our more" class="block-0__find-button">
+            </div>
+        </div>
+    </section>
     <div class="header__stripe beige-background">
         <div class="beige-stripe__links">
             <a class="beige-stripe__links-1" href="http://123.cum"></a>
@@ -33,8 +40,10 @@
     </div>
     <section class="block-1">
         <div class="block-1__text">
-            <h2 class="block-1__text-title box-title">Build Your Social <span class="red-marked"> Marketing </span> With Ass</h2>
-            <p class="block-1__text-paragraph box-paragraph">There are many variations of passages of Lorem Ipsum available, but the majority
+            <h2 class="block-1__text-title box-title">Build Your Social <span class="red-marked"> Marketing </span> With
+                Ass</h2>
+            <p class="block-1__text-paragraph box-paragraph">There are many variations of passages of Lorem Ipsum
+                available, but the majority
                 have
                 suffered alteration in some form, by injected humour, or randomised words which don't look even slightly
                 believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
@@ -50,11 +59,12 @@
     </section>
     <section class="gray-stripe">
         <div class="gray-stripe__column">
-            <h5 class="column-name">SEO Analysis</h5>
+            <h5 class="column-name _regular-font">SEO Analysis</h5>
             <h2 class="column-title">Developing Business Managment Skills</h2>
-            <p class="column-paragraph">Alia mucius ex nam, ea facer liber usu, e aliquam platontem est. Ut melo cum
+            <p class="column-paragraph _regular-font">Alia mucius ex nam, ea facer liber usu, e aliquam platontem est.
+                Ut melo cum
                 comune similique in.</p>
-            <a href="http://123.cum" class="column-button">Find Out More</a>
+            <a href="http://123.cum" class="column-button _regular-font">Find Out More</a>
         </div>
         <div class="gray-stripe__column">
             <h5 class="column-name">Content Writing</h5>
@@ -207,19 +217,22 @@
             <div class="news__column">
                 <div class="news__column-1">
                     <h3 class="news__column-title _news-width">The Best Fonts for Modern Design</h3>
-                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January 25, 2021</p>
+                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January
+                        25, 2021</p>
                     <p class="news__column-preview _news-width">A leisurely start as not expected at our next
                         campsite....</p>
                 </div>
                 <div class="news__column-2">
                     <h3 class="news__column-title _news-width">Identity Design for a New Crusader</h3>
-                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January 25, 2021</p>
+                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January
+                        25, 2021</p>
                     <p class="news__column-preview _news-width">There is always one constant about international
                         travel...</p>
                 </div>
                 <div class="news__column-3">
                     <h3 class="news__column-title _news-width">The Best Fonts for Modern Design</h3>
-                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January 25, 2021</p>
+                    <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January
+                        25, 2021</p>
                     <p class="news__column-preview _news-width">Just for once we were trying to forget Covid . We were
                         out for the
                         morning...</p>
@@ -274,6 +287,7 @@
             </div>
         </div>
     </footer>
-</div>
+    -->
+</main>
 </body>
 </html>
