Доработал ховер для кнопок с классом .box-link Раскидал картинки по папкам и поправил названия переменных c учётом введения block-0

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
     </section>
-    <div class="header__stripe beige-background">
+    <div class="block-0__stripe beige-background">
         <div class="beige-stripe__links">
             <a class="beige-stripe__links-1" href="http://123.cum"></a>
             <a class="beige-stripe__links-2" href="http://123.cum"></a>
@@ -287,7 +287,6 @@
             </div>
         </div>
     </footer>
-    -->
 </main>
 </body>
 </html>
