Изменил расположение links в block-0. Теперь ровнее и без margin-padding. Для адекратного вида пришлось добавить border. Изменил размещение маркеров списка с list-style на before, чтобы убрать padding Заменил очередную часть marging и padding flex размещением Ещё несколько hover-ов и доработка старых

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
     </section>
     <div class="block-0__stripe beige-background">
         <div class="beige-stripe__links">
-            <a class="beige-stripe__links-1" href="http://123.cum"></a>
-            <a class="beige-stripe__links-2" href="http://123.cum"></a>
-            <a class="beige-stripe__links-3" href="http://123.cum"></a>
-            <a class="beige-stripe__links-4" href="http://123.cum"></a>
-            <a class="beige-stripe__links-5" href="http://123.cum"></a>
+            <a class="beige-stripe__links-1 _links-border" href="http://123.cum"></a>
+            <a class="beige-stripe__links-2 _links-border" href="http://123.cum"></a>
+            <a class="beige-stripe__links-3 _links-border" href="http://123.cum"></a>
+            <a class="beige-stripe__links-4 _links-border" href="http://123.cum"></a>
+            <a class="beige-stripe__links-5 _links-border" href="http://123.cum"></a>
         </div>
     </div>
     <section class="block-1">
@@ -50,9 +50,9 @@
                 embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to
                 repeat</p>
             <ul class="block-1__list">
-                <li>Social Media Marketing</li>
-                <li>Growth Business Development</li>
-                <li>Market Research & Content Marketing</li>
+                <li class="block-1__list-marker">Social Media Marketing</li>
+                <li class="block-1__list-marker">Growth Business Development</li>
+                <li class="block-1__list-marker">Market Research & Content Marketing</li>
             </ul>
             <a class="box-link" href="http://123.cum">Learn More</a>
         </div>
@@ -62,8 +62,7 @@
             <h5 class="column-name _regular-font">SEO Analysis</h5>
             <h2 class="column-title">Developing Business Managment Skills</h2>
             <p class="column-paragraph _regular-font">Alia mucius ex nam, ea facer liber usu, e aliquam platontem est.
-                Ut melo cum
-                comune similique in.</p>
+                Ut melo cum comune similique in.</p>
             <a href="http://123.cum" class="column-button _regular-font">Find Out More</a>
         </div>
         <div class="gray-stripe__column">
@@ -127,22 +126,22 @@
     </section>
     <section class="articles">
         <div class="article-1">
-            <a href="http://123.cum" class="article-1__link"></a>
+            <a href="http://123.cum" class="article-1__link article__link-scale"></a>
             <h4 class="article-category">Business</h4>
             <h3 class="article-title">Work rules</h3>
         </div>
         <div class="article-2">
-            <a href="http://123.cum" class="article-2__link"></a>
+            <a href="http://123.cum" class="article-2__link article__link-scale"></a>
             <h4 class="article-category">Business</h4>
             <h3 class="article-title">Work rules</h3>
         </div>
         <div class="article-3">
-            <a href="http://123.cum" class="article-3__link"></a>
+            <a href="http://123.cum" class="article-3__link article__link-scale"></a>
             <h4 class="article-category">Business</h4>
             <h3 class="article-title">Work rules</h3>
         </div>
         <div class="article-4">
-            <a href="http://123.cum" class="article-4__link"></a>
+            <a href="http://123.cum" class="article-4__link article__link-scale"></a>
             <h4 class="article-category">Business</h4>
             <h3 class="article-title">Work rules</h3>
         </div>
