Заменил очередную часть marging и padding flex размещением  Отредактировал сексию коммунити

--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
             <p class="community-subtitle">---Testimonial</p>
             <h1 class="community-title">Our <span class="red-marked">Patients</span></h1>
             <div class="patients__block">
-                <p class="patients__block-text">Labores placerat salutandi nam ea, id qui eligendi ex adipiscing sei
+                <p class="patients__block-text">Labores placerat salutandi nam ea, id qui eligendi
+                    ex
+                    adipiscing sei
                     disputationi. Iuvaret constituam id his, epicuri evertitur quo in, sint </p>
                 <h3 class="patients__block-name">Joe Root</h3>
                 <h4 class="patients__block-status">Happy Patient</h4>
@@ -214,21 +216,21 @@
             <p class="community-subtitle _news-title-width"> ---Our Blog</p>
             <h1 class="community-title _news-title-width">Check <span class="red-marked">the News</span></h1>
             <div class="news__column">
-                <div class="news__column-1">
+                <div class="news__column-1  _news-column-text">
                     <h3 class="news__column-title _news-width">The Best Fonts for Modern Design</h3>
                     <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January
                         25, 2021</p>
                     <p class="news__column-preview _news-width">A leisurely start as not expected at our next
                         campsite....</p>
                 </div>
-                <div class="news__column-2">
+                <div class="news__column-2 _news-column-text">
                     <h3 class="news__column-title _news-width">Identity Design for a New Crusader</h3>
                     <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January
                         25, 2021</p>
                     <p class="news__column-preview _news-width">There is always one constant about international
                         travel...</p>
                 </div>
-                <div class="news__column-3">
+                <div class="news__column-3 _news-column-text">
                     <h3 class="news__column-title _news-width">The Best Fonts for Modern Design</h3>
                     <p class="news__column-date">By <a href="http://123.cum" class="news__author">Admin</a> - January
                         25, 2021</p>
